--- a/src/Banner/banner.scss
+++ b/src/Banner/banner.scss
@@ -44,6 +44,7 @@
             &.tb-show-only {
                 display: flex;
                 background-size: cover;
+                background-position: 50%;
             }
         }
 
