--- a/src/BestSellers/bestsellers.scss
+++ b/src/BestSellers/bestsellers.scss
@@ -23,7 +23,7 @@
         .slide {
             background: transparent;
             height: 300px;
-            border: 1px solid grey;
+            border: .35px solid #e3e3e3;
             padding: 10px;
             margin-right: 15px;
             display: flex;
@@ -79,13 +79,19 @@
         }
     }
 
-    @media only screen and ( max-width: 768px ) and ( min-width: 426px ) {
+    @media only screen and ( max-width: 1024px ) and ( min-width: 725px ) {
         .carousel .slide {
             height: 230px;
         }
     }
 
-    @media only screen and ( max-width: 425px ){
+    @media only screen and ( min-width: 426px ) and ( max-width: 725px ){
+        .carousel .slide {
+            height: 180px;
+        }
+    }
+
+    @media only screen and ( max-width: 426px ){
         .carousel{
             padding: 60px;
 
@@ -94,6 +100,7 @@
 
                 .slide {
                     margin-right: 0;
+                    height: 100px;
                 }
             }
 
@@ -109,8 +116,5 @@
                 left: 30%;
             }
         }
-    }
-
-    @media only screen and ( max-width: 425px ){
     }
 }
